# tg-bot-sho-poisty

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  INSTALL.md  NEXT_STEPS.md  README.md  RUNBOOK.md  alembic.ini  docker-compose.yml  pyproject.toml  report-2026-07-14-09-01.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: b3c41d92ae51_drop_diet_category.py  f82a10d770df_initial_schema.py
bot/: config.py  main.py  middlewares.py  rendering.py  utils.py
bot/db/: models.py  repo.py  session.py
bot/handlers/: add_recipe.py  group.py  menu.py  query.py  start.py
bot/keyboards/: common.py
bot/services/: ingestion.py  menu_planner.py  openrouter_credits.py  retrieval.py  shopping_list.py
bot/services/llm/: base.py  gemini.py  openrouter.py  prompts.py  retry.py
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: check-heartbeat.sh  deploy.sh  ntfy-docker-watch.sh  ntfy-send.sh  server-maint.sh
scripts/systemd/: docker-image-prune.service  docker-image-prune.timer  ntfy-bot-watch.service  ntfy-disk-check.service  ntfy-disk-check.timer  ntfy-heartbeat-check.service  ntfy-heartbeat-check.timer
tests/: test_admin_stats.py  test_architecture.py  test_ask_suggestions.py  test_edit_flow.py  test_heartbeat.py  test_list_numbers.py  test_llm_retry.py  test_openrouter.py  test_rendering_list.py  test_rendering_served.py  test_repo.py  test_shopping_list.py
