[project]
name = "tg-bot-sho-poisty"
version = "0.1.0"
description = "Сімейний Telegram-бот з базою рецептів: додавай рецепти у будь-якому форматі, питай «що поїсти?»"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "google-genai>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
